# sphinx-autodoc2

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: autodoc.md  autodoc_diff.md  conf.py  config.md  docstrings.md  index.md  quickstart.md  summary.md
docs/apidocs/: index.rst
docs/apidocs/aiida/: aiida.cmdline.rst  aiida.common.rst  aiida.engine.rst  aiida.manage.rst  aiida.orm.rst  aiida.parsers.rst  aiida.plugins.rst  aiida.repository.rst  aiida.rst  aiida.schedulers.rst  aiida.tools.rst  aiida.transports.rst
docs/apidocs/autodoc2/: autodoc2.analysis.rst  autodoc2.astroid_utils.rst  autodoc2.cli.rst  autodoc2.config.rst  autodoc2.db.md  autodoc2.extension.rst  autodoc2.render.base.rst  autodoc2.render.myst_.rst  autodoc2.render.rst  autodoc2.render.rst_.rst  autodoc2.resolve_all.rst  autodoc2.rst  autodoc2.sphinx.autodoc.rst  autodoc2.sphinx.docstring.rst  autodoc2.sphinx.extension.rst  autodoc2.sphinx.logging_.rst  autodoc2.sphinx.rst  autodoc2.sphinx.summary.rst  autodoc2.sphinx.utils.rst  autodoc2.utils.rst
src/autodoc2/: __init__.py  analysis.py  astroid_utils.py  cli.py  config.py  db.py  extension.py  resolve_all.py  utils.py
src/autodoc2/render/: base.py  myst_.py  rst_.py
src/autodoc2/sphinx/: __init__.py  autodoc.py  docstring.py  extension.py  logging_.py  summary.py  utils.py
tests/: test_analyse_module.py  test_database.py  test_render.py
tests/test_analyse_module/: test_basic_assign_annotation_.yml  test_basic_assign_annotation_union_.yml  test_basic_assign_bytes_.yml  test_basic_assign_class_.yml  test_basic_assign_dict_.yml  test_basic_assign_float_.yml  test_basic_assign_int_.yml  test_basic_assign_list_.yml  test_basic_assign_set_.yml  test_basic_assign_string_.yml  test_basic_assign_tuple_.yml  test_basic_class_abstractmethod_basic_.yml  test_basic_class_attribute_.yml  test_basic_class_attribute_with_docstring_.yml  test_basic_class_basic_.yml  test_basic_class_classmethod_basic_.yml  test_basic_class_docstring_.yml  test_basic_class_inherit_.yml  test_basic_class_inherit_generic_.yml  test_basic_class_inherit_multi_.yml  test_basic_class_inherited_.yml  test_basic_class_inherited_with_docstring_.yml  test_basic_class_method_basic_.yml  test_basic_class_property_basic_.yml  test_basic_class_staticmethod_basic_.yml  test_basic_func_1arg_.yml  test_basic_func_1kwarg_.yml  test_basic_func_args_.yml  test_basic_func_async_.yml  test_basic_func_basic_.yml  test_basic_func_docstring_.yml  test_basic_func_kwargs_.yml  test_basic_module_all_.yml  test_basic_module_docstring_.yml  test_basic_overload_basic_.yml  test_package.yml
tests/test_database/: test_all_resolution.yml
tests/test_render/: test_basic_myst_.md  test_basic_rst_.rst  test_config_options_myst_.md  test_config_options_rst_.rst  test_sphinx_build_directives.xml
